# pipeline_runtime_bridge

./: .gitignore  README.md  pyproject.toml
src/pipeline_runtime_bridge/: cli.py  context.py  contract.py  dispatcher.py  events.py  report.py  router.py
tests/: test_cli.py  test_context.py  test_contract.py  test_dispatcher.py  test_events.py  test_report.py  test_router.py
