[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-runtime-bridge"
version = "0.1.0"
description = "Lightweight runtime bridge for RADAR_SERVICE reusable pipeline utilities."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "RADAR_SERVICE" }
]
dependencies = []

[project.scripts]
runtime-bridge = "pipeline_runtime_bridge.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
